--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>今日は避難訓練</h1>
+    <h1>It is Thursday.</h1>
     <img src="images/tsuda.jpeg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global community of</p>
